// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WuiRange allows value prop to accept a number 1`] = `
<div
  class="wuiRangeWrapper wuiRange"
>
  <div
    aria-hidden="false"
    class="wuiRangeTrack"
  >
    <input
      aria-hidden="false"
      class="wuiRangeSlider"
      id="generated-id"
      max="100"
      min="0"
      step="1"
      type="range"
      value="8"
    />
    <div
      class="wuiRangeTooltip"
    >
      <output
        class="wuiRangeTooltip__value wuiRangeTooltip__value--right"
        style="left:8%"
      >
        8
      </output>
    </div>
  </div>
</div>
`;

exports[`WuiRange allows value prop to accept empty string 1`] = `
<div
  class="wuiRangeWrapper wuiRange"
>
  <div
    aria-hidden="false"
    class="wuiRangeTrack"
  >
    <input
      aria-hidden="false"
      class="wuiRangeSlider"
      id="generated-id"
      max="100"
      min="0"
      step="1"
      type="range"
      value=""
    />
  </div>
</div>
`;

exports[`WuiRange is rendered 1`] = `
<div
  class="wuiRangeWrapper wuiRange testClass1 testClass2"
>
  <div
    aria-hidden="false"
    class="wuiRangeTrack"
  >
    <input
      aria-hidden="false"
      aria-label="aria-label"
      class="wuiRangeSlider"
      data-test-subj="test subject string"
      id="id"
      max="100"
      min="0"
      name="name"
      step="1"
      type="range"
      value="8"
    />
  </div>
</div>
`;

exports[`WuiRange props compressed should render 1`] = `
<div
  class="wuiRangeWrapper wuiRangeWrapper--compressed wuiRange"
>
  <div
    aria-hidden="false"
    class="wuiRangeTrack"
  >
    <input
      aria-hidden="false"
      class="wuiRangeSlider wuiRangeSlider--compressed"
      id="generated-id"
      max="100"
      min="0"
      step="1"
      type="range"
      value="8"
    />
  </div>
</div>
`;

exports[`WuiRange props custom ticks should render 1`] = `
<div
  class="wuiRangeWrapper wuiRange"
>
  <div
    aria-hidden="false"
    class="wuiRangeTrack"
    style="margin-right:0.6em"
  >
    <div
      class="wuiRangeTicks"
    >
      <button
        class="wuiRangeTick wuiRangeTick--isCustom"
        style="left:20%"
        tabindex="-1"
        title="20kb"
        type="button"
        value="20"
      >
        20kb
      </button>
      <button
        class="wuiRangeTick wuiRangeTick--isCustom"
        style="left:100%"
        tabindex="-1"
        title="100kb"
        type="button"
        value="100"
      >
        100kb
      </button>
    </div>
    <input
      aria-hidden="false"
      class="wuiRangeSlider wuiRangeSlider--hasTicks"
      id="generated-id"
      max="100"
      min="0"
      step="1"
      type="range"
      value="8"
    />
  </div>
</div>
`;

exports[`WuiRange props disabled should render 1`] = `
<div
  class="wuiRangeWrapper wuiRange"
>
  <div
    aria-hidden="false"
    class="wuiRangeTrack wuiRangeTrack--disabled"
  >
    <input
      aria-hidden="false"
      class="wuiRangeSlider"
      disabled=""
      id="generated-id"
      max="100"
      min="0"
      step="1"
      type="range"
      value="8"
    />
  </div>
</div>
`;

exports[`WuiRange props fullWidth should render 1`] = `
<div
  class="wuiRangeWrapper wuiRangeWrapper--fullWidth wuiRange"
>
  <div
    aria-hidden="false"
    class="wuiRangeTrack"
  >
    <input
      aria-hidden="false"
      class="wuiRangeSlider"
      id="generated-id"
      max="100"
      min="0"
      step="1"
      type="range"
      value="8"
    />
  </div>
</div>
`;

exports[`WuiRange props input should render 1`] = `
<div
  class="wuiRangeWrapper wuiRange testClass1 testClass2"
>
  <div
    aria-hidden="true"
    class="wuiRangeTrack"
  >
    <input
      aria-hidden="true"
      aria-label="aria-label"
      class="wuiRangeSlider"
      data-test-subj="test subject string"
      max="100"
      min="0"
      name="name"
      step="1"
      tabindex="-1"
      type="range"
      value="8"
    />
  </div>
  <div
    class="wuiRange__horizontalSpacer"
  />
  <div
    class="wuiFormControlLayout"
  >
    <div
      class="wuiFormControlLayout__childrenWrapper"
    >
      <input
        aria-label="aria-label"
        class="wuiFieldNumber wuiRangeInput wuiRangeInput--max"
        data-test-subj="test subject string"
        id="id"
        max="100"
        min="0"
        name="name"
        step="1"
        style="width:4.4em"
        type="number"
        value="8"
      />
    </div>
  </div>
</div>
`;

exports[`WuiRange props labels should render 1`] = `
<div
  class="wuiRangeWrapper wuiRange"
>
  <label
    class="wuiRangeLabel wuiRangeLabel--min"
  >
    0
  </label>
  <div
    aria-hidden="false"
    class="wuiRangeTrack"
  >
    <input
      aria-hidden="false"
      class="wuiRangeSlider"
      id="generated-id"
      max="100"
      min="0"
      step="1"
      type="range"
      value="8"
    />
  </div>
  <label
    class="wuiRangeLabel wuiRangeLabel--max"
  >
    100
  </label>
</div>
`;

exports[`WuiRange props levels should render 1`] = `
<div
  class="wuiRangeWrapper wuiRange"
>
  <div
    aria-hidden="false"
    class="wuiRangeTrack"
  >
    <div
      class="wuiRangeLevels"
    >
      <span
        class="wuiRangeLevel wuiRangeLevel--danger"
        style="width:20%"
      />
      <span
        class="wuiRangeLevel wuiRangeLevel--success"
        style="width:80%"
      />
    </div>
    <input
      aria-hidden="false"
      class="wuiRangeSlider"
      id="generated-id"
      max="100"
      min="0"
      step="1"
      type="range"
      value="20"
    />
  </div>
</div>
`;

exports[`WuiRange props range should render 1`] = `
<div
  class="wuiRangeWrapper wuiRange"
>
  <div
    aria-hidden="false"
    class="wuiRangeTrack"
  >
    <div
      class="wuiRangeHighlight"
    >
      <div
        class="wuiRangeHighlight__progress"
        style="margin-left:0%;width:8%"
      />
    </div>
    <input
      aria-hidden="false"
      class="wuiRangeSlider wuiRangeSlider--hasRange"
      id="generated-id"
      max="100"
      min="0"
      step="1"
      type="range"
      value="8"
    />
  </div>
</div>
`;

exports[`WuiRange props slider should display in popover 1`] = `
<div
  class="wuiPopover wuiPopover--anchorDownLeft wuiPopover--displayBlock wuiInputPopover wuiRange__popover"
>
  <div
    class="wuiPopover__anchor"
  >
    <div>
      <div
        class="wuiFormControlLayout"
      >
        <div
          class="wuiFormControlLayout__childrenWrapper"
        >
          <input
            aria-label="aria-label"
            class="wuiFieldNumber wuiRangeInput wuiRangeInput--max"
            data-test-subj="test subject string"
            id="id"
            max="100"
            min="0"
            name="name"
            step="1"
            type="number"
            value="8"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`WuiRange props ticks should render 1`] = `
<div
  class="wuiRangeWrapper wuiRange"
>
  <div
    aria-hidden="false"
    class="wuiRangeTrack"
    style="margin-right:0.6em"
  >
    <div
      class="wuiRangeTicks"
      style="margin:0 -8.333333333333332%;left:0;right:0"
    >
      <button
        class="wuiRangeTick"
        style="width:16.666666666666664%"
        tabindex="-1"
        type="button"
        value="0"
      >
        0
      </button>
      <button
        class="wuiRangeTick"
        style="width:16.666666666666664%"
        tabindex="-1"
        type="button"
        value="20"
      >
        20
      </button>
      <button
        class="wuiRangeTick"
        style="width:16.666666666666664%"
        tabindex="-1"
        type="button"
        value="40"
      >
        40
      </button>
      <button
        class="wuiRangeTick"
        style="width:16.666666666666664%"
        tabindex="-1"
        type="button"
        value="60"
      >
        60
      </button>
      <button
        class="wuiRangeTick"
        style="width:16.666666666666664%"
        tabindex="-1"
        type="button"
        value="80"
      >
        80
      </button>
      <button
        class="wuiRangeTick"
        style="width:16.666666666666664%"
        tabindex="-1"
        type="button"
        value="100"
      >
        100
      </button>
    </div>
    <input
      aria-hidden="false"
      class="wuiRangeSlider wuiRangeSlider--hasTicks"
      id="generated-id"
      max="100"
      min="0"
      step="1"
      type="range"
      value="8"
    />
  </div>
</div>
`;

exports[`WuiRange props value should render 1`] = `
<div
  class="wuiRangeWrapper wuiRange"
>
  <div
    aria-hidden="false"
    class="wuiRangeTrack"
  >
    <input
      aria-hidden="false"
      class="wuiRangeSlider"
      id="generated-id"
      max="100"
      min="0"
      step="1"
      type="range"
      value="200"
    />
    <div
      class="wuiRangeTooltip"
    >
      <output
        class="wuiRangeTooltip__value wuiRangeTooltip__value--left"
        style="right:0%"
      >
        before200after
      </output>
    </div>
  </div>
</div>
`;
